# factuality-api

./: .gitignore  README.md  alembic.ini  corpus.tsv  docker-compose.yml  justfile  pyproject.toml  requirements.txt
alembic/versions/: 2024-12-16_init.py
entrypoints/: gunicorn.sh
gunicorn/: gunicorn_conf.py
src/: config.py  database.py  main.py  models.py  utils.py
src/articles/: service.py
src/db/: article.py  site.py  task.py
src/factuality/: parser.py  router.py  schemas.py  service.py
src/factuality_model/: client.py  config.py
src/ml_models/: client.py  config.py
src/score/: constants.py  feed_parser.py  parser.py  service.py  utils.py
src/score/labels/: framing_mapping.json  persuasion_mapping.json
src/sites/: service.py
src/tasks/: constants.py  exceptions.py  router.py  schemas.py  service.py
