[tool.poetry]
name = "factuality-api"
version = "0.1.0"
description = "Factuality API"
authors = ["Rakhat Khamitov"]
readme = "README.md"
license = "UNLICENSED"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.115.6"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
alembic = "^1.14.0"
courlan = "^1.3.2"
newspaper4k = "^0.9.3.1"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
databases = "^0.9.0"
pyarrow = "^18.1.0"
trafilatura = "^2.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"

[tool.poetry.group.prod.dependencies]
gunicorn = "^23.0.0"
prometheus-client = "^0.21.1"
python-json-logger = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
